@@ -1,5 +1,7 @@
 Version 0.16
  Initial add of livekml PHP script for watching live Google Earth
+ Conf: Accept hex PIDs as well as human names for log_columns
+ Sim Cycle gen: provide pids up to 0x60
 
 Version 0.15 (released 2010-06-18)
  Sim: Always return errors in groups of three, padded if necessary
